apps/argocd/prod-https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: argocd.eks.solidrust.net
    http:
      paths:
        - backend:
          service:
            name: argocd-server
            port:
              number: 80
          path: /
          pathType: Exact
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-grpc-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  rules:
  - host: argocd-grpc.eks.solidrust.net
    http:
      paths:
        - backend:
          service: 
            name: argocd-server
            port: 
              number: 443
          path: /
          pathType: Exact
